--- a/ShahWilayat/Views/Member/Index.cshtml
+++ b/ShahWilayat/Views/Member/Index.cshtml
@@ -49,6 +49,7 @@
                                 <th>Cell No</th>
                                 <th>Status</th>
                                 <th class="align-middle">Action</th>
+                                <th class="align-middle">Attachments</th>
                             </tr>
                         </thead>
                         <tbody class="MemberListing"></tbody>
@@ -509,7 +510,7 @@
                                 <span class="btn btn-block btn-outline btn-info btn-file">
                                     <span class="fileinput-new">Attach CNIC Front</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
-                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile_upd" accept="image/*" />
+                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile_upd notrequired" accept="image/*" />
                                 </span>
                                 <span class="fileinput-filename"></span>
                                 <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
@@ -521,7 +522,7 @@
                                 <span class="btn btn-block btn-outline btn-info btn-file">
                                     <span class="fileinput-new">Attach CNIC Back</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
-                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicBackFile_upd" accept="image/*" />
+                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicBackFile_upd notrequired" accept="image/*" />
                                 </span>
                                 <span class="fileinput-filename"></span>
                                 <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
@@ -533,7 +534,7 @@
                                 <span class="btn btn-block btn-outline btn-info btn-file">
                                     <span class="fileinput-new">Attach Recent Profile Picture</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
-                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtProfileFile_upd" accept="image/*" />
+                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtProfileFile_upd notrequired" accept="image/*" />
                                 </span>
                                 <span class="fileinput-filename"></span>
                                 <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
@@ -798,7 +799,6 @@
                                     <th class="center">Plot Type</th>
                                     <th class="center">Plot Size</th>
                                     <th class="center">Plot No</th>
-
                                 </tr>
                             </thead>
                             <tbody class="PlotListing"></tbody>
@@ -855,9 +855,9 @@
             <input type="hidden" class="hdnMembershipDate" value="${ToJavaScriptDate(MembershipDate)}" />
             <input type="hidden" class="hdnReferenceNo" value="${ReferenceNo}" />
             <input type="hidden" class="hdnFolioNo" value="${FolioNo}" />
-            <input type="hidden" class="hdnCnicFrontFile" value="../Uploads/${JSON.parse(CnicFrontFile)[0]}" />
-            <input type="hidden" class="hdnCnicBackFile" value="../Uploads/${JSON.parse(CnicBackFile)[0]}" />
-            <input type="hidden" class="hdnProfileFile" value="../Uploads/${JSON.parse(ProfileFile)[0]}" />
+            <input type="hidden" class="hdnCnicFrontFile" value="${CnicFrontFile}" />
+            <input type="hidden" class="hdnCnicBackFile" value="${CnicBackFile}" />
+            <input type="hidden" class="hdnProfileFile" value="${ProfileFile}" />
 
             <td align="center"></td>
             <td class="project-title tdMembershipNo">${MembershipNo}</td>
@@ -865,31 +865,30 @@
             <td class="project-title tdName">${FirstName+' '+LastName}</td>
             <td class="project-title tdCellNo">${CellNo}</td>
             <td class="project-title tdStatus">
-                <div class="badge badge-success badge-pill ">Active</div>
+                <div class="badge badge-success badge-pill">Active</div>
             </td>
-            <td class="project-title">
+            <td class="project-title" nowrap>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#PrintMember" onclick="PrintIndividualMember(this)" data-toggle="tooltip" title="Print Profile"><i class="la la-user warning"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditMember" onclick="EditMember(this)" data-toggle="tooltip" title="Edit Member"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditMember(this)" data-toggle="tooltip" title="Edit Attachment"><i class="ft-paperclip"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteMember" onclick="EditMember(this)" data-toggle="tooltip" title="Delete Member"><i class="la la-trash danger"></i></a>
             </td>
-
-
+            <td align="center" class="project-title">
+                <a href="${CnicFrontFile==''? '': '../Uploads/'+JSON.parse(CnicFrontFile)[0]}" download="" data-toggle="tooltip" title="CNIC Front"><i class="la la-cloud-download warning"></i></a>&nbsp;
+                <a href="${CnicBackFile==''? '': '../Uploads/'+JSON.parse(CnicBackFile)[0]}" download="" data-toggle="tooltip" title="CNIC Back"><i class="la la-cloud-download success"></i></a>&nbsp;
+                <a href="${ProfileFile==''? '': '../Uploads/'+JSON.parse(ProfileFile)[0]}" download="" data-toggle="tooltip" title="Profile Picture"><i class="la la-cloud-download info"></i></a>
+            </td>
         </tr>
     </script>
     @*Print Individual*@
     <script type="text/x-jQuery-tmpl" id="PlotListing">
 
         <tr class="trPlots center" style="line-height: 25px;">
-            
+
             <td style="border-bottom: 1px solid #e7eaec;"></td>
             <td class="project-title tdPlotType" style="border-bottom: 1px solid #e7eaec;">${PlotType}</td>
             <td class="project-title tdPlotSize" style="border-bottom: 1px solid #e7eaec;">${Size+' '+Unit}</td>
             <td class="project-title tdPlotNo" style="border-bottom: 1px solid #e7eaec;">${PlotNo}</td>
-          
-
-
-
         </tr>
     </script>
     <script src="~/Scripts/assets/js/PagesJS/Member.js"></script>
