Done with Receipt Integeration.

--- a/ShahWilayat/Views/ManualPayment/Index.cshtml
+++ b/ShahWilayat/Views/ManualPayment/Index.cshtml
@@ -20,7 +20,7 @@
                 </div>
                 <div class="card-body frmManualPayment">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="ddlAllotmentType">Allotment Type</label>
                                 <select class="form-control ddlAllotmentType">
@@ -30,81 +30,81 @@
                                 </select>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="ddlMember">Member</label>
                                 <select class="form-control ddlMember select2" style="width:100%"></select>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="ddlPlotType">Plot Type</label>
                                 <select class="form-control ddlPlotType select2" style="width:100%"></select>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="ddlPlot">Plot</label>
                                 <select class="form-control ddlPlot select2" style="width:100%"></select>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="txtPaymentDate">Payment Date</label>
                                 <input type="text" class="form-control DatePicker txtPaymentDate" placeholder="mm/dd/yyyy">
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="ddlPaymentCategory">Payment Category</label>
                                 <select class="form-control ddlPaymentCategory select2" style="width:100%"></select>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="ddlPaymentType">Payment Type</label>
                                 <select class="form-control ddlPaymentType"></select>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="ddlPaymentMethod">Payment Method</label>
                                 <select class="form-control ddlPaymentMethod"></select>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="txtPayableAmount">Payment Amount</label>
                                 <input type="text" class="form-control txtPayableAmount" placeholder="Enter payment amount"></>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="txtReceiptNo">Receipt No</label>
+                                <input type="text" class="form-control txtReceiptNo" placeholder="Enter receipt no" />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="txtChequeNo">Cheque No</label>
+                                <input type="text" class="form-control txtChequeNo notrequired" disabled="" placeholder="Enter cheque no" />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="txtChequeDate">Cheque Date</label>
+                                <input type="text" class="form-control DatePickerComplete txtChequeDate" disabled="" placeholder="mm/dd/yyyy">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="txtRemarks">Remarks</label>
-                                <textarea class="form-control txtRemarks" rows="4" placeholder="Enter your remarks"></textarea>
-                             
+                                <textarea class="form-control txtRemarks notrequired" rows="2" placeholder="Enter your remarks"></textarea>
+
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <div class="card-footer ml-auto">
                     <span>
@@ -112,7 +112,7 @@
                     </span>
                 </div>
             </div>
-       
+
         </section>
     </div>
 </div>
