--- a/ShahWilayat/Views/Payment/Index.cshtml
+++ b/ShahWilayat/Views/Payment/Index.cshtml
@@ -83,7 +83,19 @@
                                 <input type="text" class="form-control txtChequeNo notrequired" disabled="" placeholder="Enter cheque no" />
                             </div>
                         </div>
-
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="txtChequeDate">Cheque Date</label>
+                                <input type="text" class="form-control DatePickerComplete txtChequeDate" disabled="" placeholder="mm/dd/yyyy">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="txtRemarks">Remarks</label>
+                                <textarea class="form-control txtRemarks notrequired" placeholder="Enter remarks" rows="1"></textarea>
+                                
+                            </div>
+                        </div>
                     </div>
 
 
