--- a/ShahWilayat/Views/Member/Index.cshtml
+++ b/ShahWilayat/Views/Member/Index.cshtml
@@ -93,7 +93,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtLastName">Last Name</label>
-                                <input type="text" id="txtLastName" class="form-control txtLastName" placeholder="Enter last name">
+                                <input type="text" id="txtLastName" class="form-control txtLastName notrequired" placeholder="Enter last name">
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -202,7 +202,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtPostalCode">Postal Code</label>
-                                <input type="text" id="txtPostalCode" class="form-control txtPostalCode numericOnly" placeholder="Enter postal code">
+                                <input type="text" id="txtPostalCode" class="form-control txtPostalCode numericOnly notrequired" placeholder="Enter postal code">
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -327,7 +327,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtLastName_upd">Last Name</label>
-                                <input type="text" id="txtLastName_upd" class="form-control txtLastName_upd" placeholder="Enter last name">
+                                <input type="text" id="txtLastName_upd" class="form-control txtLastName_upd notrequired" placeholder="Enter last name">
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -363,7 +363,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtCellNo_upd">Cell No</label>
-                                <input type="text" id="txtCellNo_upd" class="form-control txtCellNo_upd numbericOnly" placeholder="Enter cell number">
+                                <input type="text" id="txtCellNo_upd" class="form-control txtCellNo_upd numbericOnly notrequired" placeholder="Enter cell number">
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -436,19 +436,19 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtPostalCode_upd">Postal Code</label>
-                                <input type="text" id="txtPostalCode_upd" class="form-control txtPostalCode_upd numericOnly" placeholder="Enter postal code">
+                                <input type="text" id="txtPostalCode_upd" class="form-control txtPostalCode_upd numericOnly notrequired" placeholder="Enter postal code">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtBloodGroup_upd">Blood Group</label>
-                                <input type="text" id="txtBloodGroup_upd" class="form-control txtBloodGroup_upd" placeholder="Enter blood group">
+                                <input type="text" id="txtBloodGroup_upd" class="form-control txtBloodGroup_upd notrequired" placeholder="Enter blood group">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtOccupation_upd">Occupation</label>
-                                <input type="text" id="txtOccupation_upd" class="form-control txtOccupation_upd" placeholder="Enter occupation">
+                                <input type="text" id="txtOccupation_upd" class="form-control txtOccupation_upd notrequired" placeholder="Enter occupation">
                             </div>
                         </div>
                         <div class="col-md-3">
