--- a/ShahWilayat/Views/Plot/Index.cshtml
+++ b/ShahWilayat/Views/Plot/Index.cshtml
@@ -243,69 +243,7 @@
 </div>
 @*Edit Modal Start*@
 
-@*Edit Attachment Start*@
-<div class="modal fade text-left" id="EditAttachment" role="dialog" aria-labelledby="myModalLabel16" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel16">Edit Attachment</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="form-body frmAttachment">
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="fileinput fileinput-new" data-provides="fileinput">
 
-                                <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Front</span>
-                                    <i class="fa fa-upload"></i>&nbsp;&nbsp;
-                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile_upd" accept="image/*" />
-                                </span>
-                                <span class="fileinput-filename"></span>
-                                <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="fileinput fileinput-new" data-provides="fileinput">
-
-                                <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach CNIC Back</span>
-                                    <i class="fa fa-upload"></i>&nbsp;&nbsp;
-                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicBackFile_upd" accept="image/*" />
-                                </span>
-                                <span class="fileinput-filename"></span>
-                                <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="fileinput fileinput-new" data-provides="fileinput">
-
-                                <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach Recent Profile Picture</span>
-                                    <i class="fa fa-upload"></i>&nbsp;&nbsp;
-                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtProfileFile_upd" accept="image/*" />
-                                </span>
-                                <span class="fileinput-filename"></span>
-                                <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn grey btn-outline-info" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-dark btnUpdateAttachment">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-@*Edit Attachment Start*@
 
 @*Delete Modal Start*@
 <div class="modal fade text-left" id="DeleteAllotment" tabindex="-1" role="dialog" aria-labelledby="myModalLabel10"
@@ -360,8 +298,7 @@
 
             </td>
             <td class="project-title" nowrap>
-                <a href="${SitePlan==null?'Null':'Abc'}" data-toggle="tooltip" data-placement="top" data-original-title="Download Site Plan" download><i class="la la-cloud-download warning"></i></a>&nbsp;
-
+               <a href="${SitePlan==''? '': '../Uploads/'+JSON.parse(SitePlan)[0]}" download="" data-toggle="tooltip" title="Site Plan"><i class="la la-cloud-download warning"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditPlot" onclick="EditPlot(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Plot"><i class="la la-pencil-square success"></i></a>
 
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#DeletePlot" onclick="EditPlot(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Plot"><i class="la la-trash danger"></i></a>
