--- a/ShahWilayat/Views/Plot/Index.cshtml
+++ b/ShahWilayat/Views/Plot/Index.cshtml
@@ -130,7 +130,7 @@
                                 <span class="btn btn-block btn-outline btn-info btn-file">
                                     <span class="fileinput-new">Attach Site Plan</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
-                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtSitePlan notrequired" accept="image/*" />
+                                    <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtSitePlan" accept="image/*" />
                                 </span>
                                 <span class="fileinput-filename"></span>
                                 <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
