--- a/ShahWilayat/Views/Member/Index.cshtml
+++ b/ShahWilayat/Views/Member/Index.cshtml
@@ -816,6 +816,70 @@
     </div>
 </div>
 @*Print Modal Start*@
+
+@*Print ID Card Modal Start*@
+<div class="modal fade text-left" id="PrintIDCard" role="dialog" aria-labelledby="myModalLabel16" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel16">Membership Profile</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-body frmMember">
+                    <div id="IDCard" >
+                        <div class="container">
+                            <table>
+                                <tr>
+                                <tr>
+                                    <td>
+                                        <img src="~/Content/assets/css/PrintMaterial/ID_Front.png" style="height:204px; width:323.52px;border:2px solid #000;">
+                                        <img src="~/Content/assets/css/PrintMaterial/ID_Back.png" style="height:204px; width:323.52px;border:2px solid #000;">
+                                        <div class="MembershipNo">
+                                            <span><b>SWC/254/06</b></span>
+                                        </div>
+                                        <div class="MemberImage">
+                                            <img src="~/Uploads/Musab Yahiya_20190123163602_20190725020850.jpg" style="width:75px; height: 97px;">
+                                        </div>
+                                        <div class="MemberName">
+                                            <span><b>Muhammad Fahad</b></span>
+                                        </div>
+                                        <div class="MemberAddress">
+                                            <span> House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.</span>
+                                        </div>
+                                        <div class="MemberCNIC">
+                                            <span>42101-5762826-3</span>
+                                        </div>
+                                        <div class="MemberBloodGroup">
+                                            <span><b>A+</b></span>
+                                        </div>
+                                        <div class="MemberMobile">
+                                            <span>0343-2101016</span>
+                                        </div>
+                                        <div class="ValidityDate">
+                                            <span>021-34423977</span>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                     
+                    </div>
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn grey btn-outline-info" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-warning btnPrintIDCard">Print</button>
+            </div>
+        </div>
+    </div>
+</div>
+@*Print ID Card Modal Start*@
+
+
 @*<link href="~/Content/assets/css/PrintMaterial/MemberProfile.css" rel="stylesheet" />*@
 @section Scripts
 {
@@ -868,6 +932,7 @@
                 <div class="badge badge-success badge-pill">Active</div>
             </td>
             <td class="project-title" nowrap>
+                <a href="javascript:void(0)"  onclick="PrintIDCard()" data-toggle="tooltip" title="ID Card"><i class="la la-credit-card primary"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#PrintMember" onclick="PrintIndividualMember(this)" data-toggle="tooltip" title="Print Profile"><i class="la la-user warning"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditMember" onclick="EditMember(this)" data-toggle="tooltip" title="Edit Member"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditMember(this)" data-toggle="tooltip" title="Edit Attachment"><i class="ft-paperclip"></i></a>
